# Meter-project

./: .env.example  .gitignore  I'm building Daraja Water — a prepaid wa.md  README.md  conftest.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_auth.py  test_models.py
config/: settings.py  urls.py
docs/superpowers/plans/: 2026-05-12-daraja-water-frontend.md  2026-05-12-daraja-water-scaffold.md
docs/superpowers/specs/: 2026-05-12-daraja-water-frontend-design.md  2026-05-12-daraja-water-scaffold-design.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  auth-guard.tsx  nav-bar.tsx
frontend/src/hooks/: use-auth.ts  use-meters.ts  use-transactions.ts
frontend/src/lib/: api.ts  auth.ts  query-client.tsx
frontend/tests/: happy-path.spec.ts
meters/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
meters/migrations/: 0001_initial.py
meters/tests/: test_models.py  test_views.py
payments/: admin.py  control_numbers.py  models.py  serializers.py  signing.py  sms.py  token_logic.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_transaction_control_number.py
payments/providers/: __init__.py  swahilies.py
payments/tests/: test_control_numbers.py  test_expire_transactions.py  test_initiate.py  test_models.py  test_signing.py  test_sms.py  test_token_logic.py  test_transactions.py  test_webhook.py
(+11 files in other folders)
